content/terraform-plugin-framework/v0.12.x/docs/plugin/framework/migrating/resources/crud.mdx
---
page_title: 'Resources - CRUD Functions: Migrating from SDKv2 to the Framework'
description: >-
  Migrate resource create, read, update, and delete (CRUD) functions from SDKv2 to the plugin Framework.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-14T14:39:20-05:00
# END AUTO GENERATED METADATA
---

# CRUD functions

In Terraform, a resource represents a single instance of a given resource type. They modify a specific resource in the
API and in Terraform's state through a set of Create, Read, Update, and Delete (CRUD) functions. A resource's CRUD
functions implement the logic required to manage your resources with Terraform. Refer to
[Resources - Define Resources](/terraform/plugin/framework/resources#define-resources) in the Framework documentation for details.

This page explains how to migrate a resource's CRUD functions from SDKv2 to the plugin Framework.

## SDKv2

In SDKv2, a resource's CRUD functions are defined by populating the relevant fields (e.g., `CreateContext`,
`ReadContext`) on the `schema.Resource` struct.

The following code shows a basic implementation of CRUD functions with SDKv2.

```go
func resourceExample() *schema.Resource {
    return &schema.Resource{
        CreateContext: create,
        ReadContext:   read,
        UpdateContext: update,
        DeleteContext: delete,
        /* ... */
```

## Framework
In the Framework, you implement CRUD functions for your resource by defining a type that implements the
`resource.Resource` interface. This type is returned by the `NewResource` function on the type implementing the
`provider.ResourceType` interface. To define functions related to state upgrade, import, and plan modification,
implement their respective interfaces on your resource: `ResourceWithUpgradeState`, `ResourceWithImportState`, and
`ResourceWithModifyPlan`.

The following code shows how you define a `resource.Resource` which implements CRUD functions with the Framework.

```go
type resourceExample struct {
    p provider
}

func (r *resourceExample) Create(ctx context.Context, req resource.CreateRequest, resp
*resource.CreateResponse) {
    /* ... */
}

func (r *resourceExample) Read(ctx context.Context, req resource.ReadRequest, resp *resource.ReadResponse) {
    /* ... */
}

func (r *resourceExample) Update(ctx context.Context, req resource.UpdateRequest, resp *resource.UpdateResponse) {
    /* ... */
}

func (r *resourceExample) Delete(ctx context.Context, req resource.DeleteRequest, resp *resource.DeleteResponse) {
    /* ... */
}
```
## Migration Notes
Remember the following differences between SDKv2 and the Framework when completing the migration.

- In SDKv2 it is not necessary to define functions for parts of the CRUD lifecycle that are not used by a given
resource. For instance, if the resource does not support in-place modification, you do not need to define an `Update`
function. In the Framework, you must implement each of the CRUD lifecycle functions on all resources to satisfy the
`Resource` interface, even if the function does nothing.
- In the Framework, there is no requirement to explicitly call `resp.State.RemoveResource()` in the `Delete` function,
as this is handled automatically by the Framework itself.
- In SDKv2, you get and set attribute values in Terraform's state by calling `Get()` and `Set()` on
`schema.ResourceData`. In the Framework, you get attribute values from the configuration and plan by accessing
`Config` and `Plan` on `resource.CreateRequest`. You set attribute values in Terraform's state by mutating `State`
on `resource.CreateResponse`.

## Example

The following examples show how to migrate portions of the
[random](https://github.com/hashicorp/terraform-provider-random) provider.

For a complete example, clone the
`terraform-provider-random` repository and compare the `resource_password.go` file in
[v3.3.2](https://github.com/hashicorp/terraform-provider-random/blob/v3.3.2/internal/provider/resource_password.go)
with [v3.4.1](https://github.com/hashicorp/terraform-provider-random/blob/v3.4.1/internal/provider/resource_password.go).

### SDKv2

The following example from the `resource_password.go` file shows implementations of CRUD functions on the
`random_password` resource with SDKv2. The `UpdateContext` function is not implemented because the provider does not
support updating this resource.

```go
func resourcePassword() *schema.Resource {
    return &schema.Resource{
        CreateContext: createPassword,
        ReadContext:   readNil,
        DeleteContext: RemoveResourceFromState,
        /* ... */
```

The following example shows the implementation of the `createPassword()` function with SDKv2. The implementations of
the `readNil()` and `RemoveResourceFromState()` functions are not shown for brevity.

```go
func createPassword(ctx context.Context, d *schema.ResourceData, meta interface{}) diag.Diagnostics {
    diags := createStringFunc(true)(ctx, d, meta)
    if diags.HasError() {
        return diags
    }

    hash, err := generateHash(d.Get("result").(string))
    if err != nil {
        diags = append(diags, diag.Errorf("err: %s", err)...)
        return diags
    }

    if err := d.Set("bcrypt_hash", hash); err != nil {
        diags = append(diags, diag.Errorf("err: %s", err)...)
        return diags
    }

    return nil
}
```

### Framework
The following shows the same section of provider code after the migration.

This code implements the `Create` function for the `random_password` resource with the Framework.

```go
func (r *passwordResource) Create(ctx context.Context, req resource.CreateRequest, resp *resource.CreateResponse) {
    var plan passwordModelV2

    diags := req.Plan.Get(ctx, &plan)
    resp.Diagnostics.Append(diags...)
    if resp.Diagnostics.HasError() {
        return
    }

    params := random.StringParams{
        Length:          plan.Length.Value,
        Upper:           plan.Upper.Value,
        MinUpper:        plan.MinUpper.Value,
        Lower:           plan.Lower.Value,
        MinLower:        plan.MinLower.Value,
        Numeric:         plan.Numeric.Value,
        MinNumeric:      plan.MinNumeric.Value,
        Special:         plan.Special.Value,
        MinSpecial:      plan.MinSpecial.Value,
        OverrideSpecial: plan.OverrideSpecial.Value,
    }

    result, err := random.CreateString(params)
    if err != nil {
        resp.Diagnostics.Append(diagnostics.RandomReadError(err.Error())...)
        return
    }

    state := passwordModelV2{
        ID:              types.String{Value: "none"},
        Keepers:         plan.Keepers,
        Length:          types.Int64{Value: plan.Length.Value},
        Special:         types.Bool{Value: plan.Special.Value},
        Upper:           types.Bool{Value: plan.Upper.Value},
        Lower:           types.Bool{Value: plan.Lower.Value},
        Numeric:         types.Bool{Value: plan.Numeric.Value},
        MinNumeric:      types.Int64{Value: plan.MinNumeric.Value},
        MinUpper:        types.Int64{Value: plan.MinUpper.Value},
        MinLower:        types.Int64{Value: plan.MinLower.Value},
        MinSpecial:      types.Int64{Value: plan.MinSpecial.Value},
        OverrideSpecial: types.String{Value: plan.OverrideSpecial.Value},
        Result:          types.String{Value: string(result)},
    }

    hash, err := generateHash(plan.Result.Value)
    if err != nil {
        resp.Diagnostics.Append(diagnostics.HashGenerationError(err.Error())...)
    }

    state.BcryptHash = types.String{Value: hash}

    diags = resp.State.Set(ctx, state)
    resp.Diagnostics.Append(diags...)
    if resp.Diagnostics.HasError() {
        return
    }
}
```
